Moved equation to display mode.

--- a/R/Multiclass_Histograms.ipynb
+++ b/R/Multiclass_Histograms.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "Now we have toy data which is a mixture model of the form \n",
-    "$X \\sim P(\\cdot; \\theta) = 0.1\\phi(\\cdot; 0, 1) + 0.9\\phi(\\cdot; 1, 1)$"
+    "$$X \\sim P(\\cdot; \\theta) = 0.1\\phi(\\cdot; 0, 1) + 0.9\\phi(\\cdot; 1, 1)$$"
    ]
   },
   {
