--- a/R/Multiclass_Histograms.ipynb
+++ b/R/Multiclass_Histograms.ipynb
@@ -52,8 +52,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have toy data which is a mixture model of the form \n",
-    "$$X \\sim P(\\cdot; \\theta) = 0.1\\phi(\\cdot; 0, 1) + 0.9\\phi(\\cdot; 1, 1)$$"
+    "Now we have toy data which comes from a mixture model with pdf \n",
+    "$$0.1\\phi(\\cdot; 0, 1) + 0.9\\phi(\\cdot; 1, 1)$$"
    ]
   },
   {
