--- a/R/heatmap.ipynb
+++ b/R/heatmap.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## ggplot replacement for heatmap.2\n",
     "\n",
-    "Here's an example.  Colors are purposely bad."
+    "Here's an example.  Colors are bad on purpose. "
    ]
   },
   {
